--- a/components/Navbar/navbar.scss
+++ b/components/Navbar/navbar.scss
@@ -3,7 +3,7 @@
     height: 10vh;
     top: 0;
     width: 100%;
-    padding: 20px;
+    padding: 20px 50px;
 
     .logo-and-links {
         gap: 10vh;
@@ -21,5 +21,20 @@
             gap: 30px;
             list-style: none;
         }
+
     }
+
+    .toggle-container {
+        canvas {
+            height: 50px;
+            width: 50px;
+        }
+    }
+
+    transition: all 0.5s;
+}
+
+.dark-nav {
+    background-color: var(--dark-bg);
+    color: white;
 }
