dark mode added and hero section added

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,4 +12,13 @@ body {
 
 :root {
   --dark-bg: #343434;
+  --text-orange: #FFC581;
+  --light-orange: #F8A08D;
+  --orange: #F26749;
+  --dark-orange: #B73E24;
+
+  --text-blue: #2B90ED;
+  --light-blue: #D3E7F9;
+  --blue: #B1DAFF;
+  --dark-blue: #3F77AB;
 }
