--- a/app/page.scss
+++ b/app/page.scss
@@ -1,9 +1,13 @@
-.main {
+.main-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  min-height: 100vh;
+  // min-height: 100vh;
+  transition: all 0.5s;
+}
+
+.dark-main {
+  background-color: var(--dark-bg);
 }
 
 .flex {
